# Frappe_Assistant_Core

./: .gitignore  .pre-commit-config.yaml  .ruffignore  CHANGELOG.md  COMMERCIAL.md  Contributing.md  LICENSE  PLUGIN_ARCHITECTURE_IMPLEMENTATION.md  README.md  RELEASE.md  SECURITY.md  UPDATED_SECURITY_OVERVIEW.md  VISUALIZATION_CLEANUP_SUMMARY.md  debug_document_list.py  frappe_assistant_stdio_bridge.py  package.json  pyproject.toml  requirements.txt  setup.py  test_analysis_tools.py
.github/: CI_STATUS.md  CI_TEST.md  LINTING.md
.github/workflows/: README.md  ci.yml  lint.yml  linter.yml  test.yml  unit-tests.yml
client_packages/: README.md
client_packages/claude-desktop/: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  build.py  manifest.json  validate_manifest.py
client_packages/claude-desktop/server/: frappe_assistant_stdio_bridge.py
client_packages/sse-mcp-bridge/: USAGE.md  setup.sh  sse_mcp_bridge.py
client_packages/sse-mcp-bridge/sse-mcp-bridge/: USAGE.md  requirements-minimal.txt  requirements.txt  sse_mcp_bridge.py  start_server.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CAPABILITIES_REPORT.md  CHANGELOG.md  COMPREHENSIVE_SECURITY_GUIDE.md  DEVELOPMENT_GUIDE.md  DYNAMIC_PORT_IMPLEMENTATION.md  ENHANCED_FEATURES.md  EXTERNAL_APP_DEVELOPMENT.md  FILE_EXTRACTION_TECHNICAL_GUIDE.md  GETTING_STARTED.md  PERFORMANCE.md  PLUGIN_DEVELOPMENT.md  README.md  SSE_BRIDGE_INTEGRATION.md  SSE_BRIDGE_QUICK_REFERENCE.md  TECHNICAL_DOCUMENTATION.md  TEST_CASE_CREATION_GUIDE.md  TOOL_DEVELOPMENT_TEMPLATES.md  TOOL_REFERENCE.md  TOOL_USAGE_GUIDE.md
docs/development/: PRE_COMMIT_SETUP.md
docs/templates/: README.md  test_template.py  tool_template.py
frappe_assistant_core/: __init__.py  boot.py  hooks.py  install.py  install_all_tools.py  modules.txt  patches.txt  start_server.py  startup.py
frappe_assistant_core/api/: __init__.py  admin.py  admin_api.py  assistant_api.py  assistant_api_notification_handler.py  fac_endpoint.py  mcp.py  oauth_discovery.py  oauth_registration.py  oauth_token.py  plugin_api.py  websocket_api.py
frappe_assistant_core/api/admin/: tools.py
frappe_assistant_core/api/handlers/: __init__.py  initialize.py  prompts.py  tools.py  tools_streaming.py
frappe_assistant_core/assistant_core/: __init__.py  connection_manager.py  protocol_handler.py  server.py  tools.py  websocket_server.py
frappe_assistant_core/assistant_core/doctype/assistant_audit_log/: __init__.py  assistant_audit_log.json  assistant_audit_log.py
frappe_assistant_core/assistant_core/doctype/assistant_connection_log/: __init__.py  assistant_connection_log.js  assistant_connection_log.json  assistant_connection_log.py
frappe_assistant_core/assistant_core/doctype/assistant_core_settings/: __init__.py  assistant_core_settings.js  assistant_core_settings.json  assistant_core_settings.py
frappe_assistant_core/assistant_core/doctype/assistant_plugin_config/: assistant_plugin_config.json  assistant_plugin_config.py
frappe_assistant_core/assistant_core/doctype/assistant_plugin_repository/: __init__.py  assistant_plugin_repository.json  assistant_plugin_repository.py
frappe_assistant_core/assistant_core/doctype/assistant_tool_registry/: __init__.py  assistant_tool_registry.json  assistant_tool_registry.py
frappe_assistant_core/assistant_core/page/: __init__.py
frappe_assistant_core/assistant_core/page/assistant_admin/: assistant_admin.html  assistant_admin.js  assistant_admin.json  assistant_admin.py
frappe_assistant_core/change_log/v2/: v2_4_3.md
frappe_assistant_core/constants/: __init__.py  definitions.py
frappe_assistant_core/core/: base_tool.py  constants.py  protocol_handler.py  security_config.py  tool_registry.py
frappe_assistant_core/fixtures/: custom_field.json
frappe_assistant_core/patches/: __init__.py
frappe_assistant_core/patches/v1_0/: add_user_assistant_enabled_field.py  cleanup_duplicate_permissions.py  update_doctype_permissions.py
frappe_assistant_core/patches/v2_0_0/: remove_deprecated_doctypes.py
frappe_assistant_core/patches/v2_4/: repair_hrms_skill_link_corruption.py
frappe_assistant_core/plugins/: __init__.py  base_plugin.py
frappe_assistant_core/plugins/batch_processing/: plugin.py
frappe_assistant_core/plugins/core/: __init__.py  plugin.py
frappe_assistant_core/plugins/core/tools/: chatgpt_fetch.py  create_document.py  delete_document.py  document_create.py  document_delete.py  document_get.py  document_list.py  document_submit.py  document_tools.py  document_update.py  generate_report.py  get_doctype_info.py  get_document.py  get_report_data.py  list_documents.py  metadata_doctype.py  metadata_doctype_fields.py  metadata_list_doctypes.py  metadata_permissions.py  metadata_tools.py  metadata_workflow.py  report_details.py  report_execute.py  report_list.py  report_requirements.py  report_tools.py  run_workflow.py  search_doctype.py  (+10 more)
frappe_assistant_core/plugins/custom_tools/: __init__.py  plugin.py
frappe_assistant_core/plugins/data_science/: plugin.py  requirements.txt
frappe_assistant_core/plugins/visualization/: __init__.py  plugin.py  plugin_registry.py
frappe_assistant_core/plugins/websocket/: plugin.py
frappe_assistant_core/services/: __init__.py  __main__.py  config_reader.py  sse_bridge.py
frappe_assistant_core/tests/: base_test.py  test_analysis_tools.py  test_audit_log.py  test_document_tools.py  test_metadata_tools.py  test_report_tools.py  test_search_tools.py  test_workflow_tools.py
frappe_assistant_core/tools/: __init__.py  analysis_tools.py  enhanced_analysis_tools.py  executor.py  registry.py  report_tools.py  search_tools.py  tool_registry.py  workflow_tools.py
frappe_assistant_core/utils/: __init__.py  audit_trail.py  auth.py  batch_processor.py  cache.py  dashboard.py  enhanced_error_handling.py  logger.py  migration_hooks.py  model_warmup.py  permissions.py  plugin_manager.py  progress_streaming.py  read_only_db.py  response_builder.py  streaming_manager.py  template_helpers.py  tool_cache.py  user_context.py  validation.py  validators.py
(+39 files in other folders)
